# percolator

./: .gitignore  .travis.yml  CMakeCache.txt  CMakeLists.txt  CNAME  CPack.txt  CPackConfig.cmake  CPackSourceConfig  CTestTestfile  CommonCMake.txt  Dockerfile  GitFromEclipseTest  INSTALL  INSTALL.mingw  INSTALL.ubuntu  INSTALL.xsd  Makefile  README  ReadMe.md  ReadMe.txt  STATUS_UPDATES  Toolchain-mingw32.cmake  build_me.sh  cmake_install  code_of_conduct.md  get_packages_ubuntu.sh  index.html  install_manifest.txt  lib  license.txt  mac_post_script.sh  params.json  quickbuild.sh  retention_times.txt  slide.tex
data/tests/: CMakeLists.txt  README  SystemTest_Elude_AutomaticModel.py  SystemTest_Elude_Performance.py  SystemTest_Elude_PtmsAutomaticModel.py  SystemTest_Elude_PtmsSaveLoad.py  SystemTest_Elude_PtmsTrainEvaluate.py  SystemTest_Elude_SaveLoadEvaluate.py  SystemTest_Elude_TrainEvaluate.py  SystemTest_Percolator_Correctness.py  SystemTest_Percolator_Performance.py  SystemTest_Qvality_Correctness.py  SystemTest_Qvality_Performance.py  SystemTest_Sqt2pin_Correctness.py  UnitTest_Elude_DataManager.cpp  UnitTest_Elude_EludeCaller.cpp  UnitTest_Elude_LibSVRModel.cpp  UnitTest_Elude_LibsvmWrapper.cpp  UnitTest_Elude_RetentionModel.cpp  UnitTest_Elude_RunAllTests.py  UnitTest_Percolator_RunAllTests.py  Unit_tests_main.cpp  simple_tests.cpp
src/: .cdtbuild  .cdtproject  .cproject  .cvsignore  .gitignore  .project  AUTHORS  Analytics.h  Array.cpp  Array.h  BaseSpline.cpp  BaseSpline.cpp.orig  BaseSpline.h  CMakeCache.txt  CMakeLists.txt  COPYING  Caller.cpp  Caller.h  Caller.h.cmake  ChangeLog  Clock.hpp  CompositionSorter.cpp  CompositionSorter.h  CrossValidation.cpp  CrossValidation.h  CubicSpline.cpp  CubicSpline.h  DataSet.cpp  DataSet.h  DataSet.h.cmake  DescriptionOfCorrect.cpp  DescriptionOfCorrect.h  EludeModel.cpp  EludeModel.h  Enzyme.cpp  Enzyme.h  Exceptions.cpp  Exceptions.h  FastaProteinReader.cpp  FastaProteinReader.h  (+164 more)
src/ArrayLibrary/: .cdtproject  .cvsignore  .project  Arithmetic.cpp  Arithmetic.h  Array.cpp  Array.h  ArrayLibrary.h  ArrayTypes.cpp  ArrayTypes.h  CMakeLists.txt  MatrixFunctions.cpp  MatrixFunctions.h  Numerical.cpp  Numerical.h  OrderedArray.cpp  OrderedArray.h  PackedArray.h  PackedMatrix.cpp  PackedMatrix.h  PackedSetFunctions.cpp  PackedSetFunctions.h  PackedVec.cpp  PackedVec.h  Random.cpp  Random.h  SparseArray.cpp  SparseArray.h  Super.h  VectorFunctions.cpp  VectorFunctions.h
src/MSToolkit/: CMakeLists.txt  MSConvertFile.cpp  MSObject.cpp  MSObject.h  MSReader.cpp  MSReader.h  MSSingleScan.cpp  MSTDemo.cpp  MSToolkit.vcproj  MSToolkitTypes.h  Makefile  README.txt  Spectrum.cpp  Spectrum.h  doxy_MSObject.dox  doxy_MSReader.dox  doxy_Types.dox  doxy_config.txt  doxy_sample.dox  doxy_spectrum.dox
src/Release/: .cvsignore  makefile  subdir.mk
src/blas/: CMakeLists.txt  Makefile  cmake_install  daxpy.c  dgemv.c  dnrm2.c
src/config/: .cvsignore
src/converters/: CMakeLists.txt  CMakeLists.txt~  FragSpectrumScanDatabase.cpp  FragSpectrumScanDatabase.h  FragSpectrumScanDatabase.h.cmake  FragSpectrumScanDatabaseBoostdb.cpp  FragSpectrumScanDatabaseBoostdb.h  FragSpectrumScanDatabaseLeveldb.cpp  FragSpectrumScanDatabaseLeveldb.h  FragSpectrumScanDatabaseTokyodb.cpp  FragSpectrumScanDatabaseTokyodb.h  Interface.cpp  Interface.h  Msgfplus2Pin.cpp  Msgfplus2Pin.h  MsgfplusReader.cpp  MsgfplusReader.cpp~  MsgfplusReader.h  MzidentmlReader.cpp  MzidentmlReader.cpp~  MzidentmlReader.h  Reader.cpp  Reader.h  Sequest2Pin.cpp  Sequest2Pin.h  SequestReader.cpp  SequestReader.h  Sqt2Pin.cpp  Sqt2Pin.h  Sqt2Pin.h.cmake  SqtReader.cpp  SqtReader.h  SqtReader.h.cmake  Tandem2Pin.cpp  Tandem2Pin.h  TandemReader.cpp  TandemReader.cpp~  TandemReader.h  boost-archive-extraction.hxx  boost-archive-insertion.hxx  (+21 more)
src/dblas/: CMakeLists.txt
src/elude/: CMakeLists.txt  CMakeLists.txt~  COPYING  DataManager.cpp  DataManager.h  Elude.cpp  Elude.h  EludeCaller.cpp  EludeCaller.h  EludeMain.cpp  LTSRegression.cpp  LTSRegression.h  LibSVRModel.cpp  LibSVRModel.h  LibsvmWrapper.cpp  LibsvmWrapper.h  RetentionFeatures.cpp  RetentionFeatures.h  RetentionModel.cpp  RetentionModel.h  SVRModel.h
src/elude_tool/: CMakeLists.txt  CMakeLists.txt~  COPYING  DataManager.cpp  DataManager.cpp~  DataManager.h  EludeCaller.cpp  EludeCaller.cpp~  EludeCaller.h  EludeMain.cpp  EludeMain.cpp~  LTSRegression.cpp  LTSRegression.h  LibSVRModel.cpp  LibSVRModel.cpp~  LibSVRModel.h  LibsvmWrapper.cpp  LibsvmWrapper.cpp~  LibsvmWrapper.h  RetentionFeatures.cpp  RetentionFeatures.cpp~  RetentionFeatures.h  RetentionModel.cpp  RetentionModel.h  SVRModel.h  elude.kdev4
src/fido/: Array.cpp  Array.h  BasicBigraph.cpp  BasicBigraph.cpp~  BasicBigraph.h  BasicBigraph.h~  BasicGroupBigraph.cpp  BasicGroupBigraph.h  BasicGroupBigraph.h~  CMakeLists.txt  Cache.h  Combinatorics.h  ForwardSampler.cpp  ForwardSampler.h  GramSchmidt.cpp  GramSchmidt.h  GroupPowerBigraph.cpp  GroupPowerBigraph.cpp~  GroupPowerBigraph.h  GroupPowerBigraph.h~  HashTable.cpp  HashTable.h  LPSolver.cpp  LPSolver.h  Makefile  Matrix.cpp  Matrix.h  Model.h  Numerical.cpp  Numerical.h  Numerical.h~  PackedMatrix.h  PackedVector.cpp  PivdoSplitter.cpp  PivdoSplitter.h  ProteinIdentifier.cpp  (+18 more)
tests/: CMakeLists.txt  DataManagerTest.cpp  EludeCallerTest.cpp  LibSVRModelTest.cpp  LibsvmWrapperTest.cpp  README  RetentionFeaturesTest.cpp  RetentionModelTest.cpp  SimpleTest1.sh  SimpleTest2.sh  SystemTest_Elude_BasicFunc.sh  SystemTest_Elude_Correctness.sh  SystemTest_Elude_Help.sh  SystemTest_Elude_Performance.py  SystemTest_Elude_Performance.sh  SystemTest_Elude_Workload.sh  SystemTest_Percolator_BasicFunc.sh  SystemTest_Percolator_Correctness.py  SystemTest_Percolator_Correctness.sh  SystemTest_Percolator_Help.sh  SystemTest_Percolator_Performance.py  SystemTest_Percolator_Performance.sh  SystemTest_Qvality_BasicFunc.sh  SystemTest_Qvality_Correctness.py  SystemTest_Qvality_Correctness.sh  SystemTest_Qvality_Help.sh  SystemTest_Qvality_Performance.py  SystemTest_Qvality_Performance.sh  simple_tests.cpp  tests_main.cpp
(+609 files in other folders)
